--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 # Your WhatsApp number
-
 NEXT_PUBLIC_WHATSAPP="123456789101112131415"
+# Your API URL
+NEXT_PUBLIC_API_URL="http://localhost:9000/public"
