--- a/amplify.yml
+++ b/amplify.yml
@@ -1,8 +1,1 @@
-[
-  {
-    "source": "/<*>",
-    "target": "/index.html",
-    "status": "200",
-    "condition": null,
-  },
-]
+[{ "source": "/<*>", "target": "/index.html", "status": "404-200" }]
